--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+
 		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
+          name="description"
+          content="Jmom is a website to book Chalet very easy"
+        />
+		<meta
+          name="Keywords"
+          content="React, booking, chalets, villas, beach, holydays , beach , summer"
+        />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!-- Bootstrap CSS -->
@@ -40,7 +45,7 @@
 			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
 			crossorigin="anonymous"
 		/>
-		<title>React</title>
+		<title>JMOM</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
